add wx qr code image
